--- a/money/package.json
+++ b/money/package.json
@@ -21,7 +21,7 @@
     },
     "dependencies": {
         "bootstrap": "4.3.1",
-        "handlebars": "4.1.2",
+        "handlebars": "^4.5.3",
         "jquery": "3.4.1",
         "jquery-validation": "1.19.1",
         "jquery-validation-unobtrusive": "3.2.11",
