--- a/money/package.json
+++ b/money/package.json
@@ -3,31 +3,31 @@
     "name": "money",
     "private": true,
     "devDependencies": {
-        "@types/bootstrap": "^4.3.2",
-        "@types/jquery": "^3.3.34",
+        "@types/bootstrap": "^4.5.0",
+        "@types/jquery": "^3.5.1",
         "@types/jquery-validation-unobtrusive": "3.2.32",
         "@types/jquery.validation": "1.16.6",
-        "@types/js-cookie": "^2.2.5",
-        "@types/sortablejs": "^1.10.4",
+        "@types/js-cookie": "^2.2.6",
+        "@types/sortablejs": "^1.10.6",
         "clean-webpack-plugin": "3.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
-        "gulp-sass": "4.0.2",
-        "source-map-loader": "0.2.4",
-        "ts-loader": "^6.2.2",
-        "ts-node": "^8.8.2",
-        "typescript": "^3.8.3",
-        "webpack": "^4.42.1",
-        "webpack-cli": "^3.3.11"
+        "gulp-sass": "^4.1.0",
+        "source-map-loader": "^1.0.2",
+        "ts-loader": "^8.0.2",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12"
     },
     "dependencies": {
-        "bootstrap": "4.4.1",
-        "jquery": "3.5.0",
-        "jquery-validation": "1.19.1",
+        "bootstrap": "^4.5.2",
+        "jquery": "^3.5.1",
+        "jquery-validation": "^1.19.2",
         "jquery-validation-unobtrusive": "3.2.11",
         "js-cookie": "2.2.1",
         "sortablejs": "^1.10.2",
-        "tslib": "^1.11.1"
+        "tslib": "^2.0.1"
     },
     "scripts": {
         "build": "webpack --mode=production --display-modules",
